# agentic-wasm

./: Cargo.toml  verify.js
src/: lib.rs
