[package]
name = "agentic-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly Safety Kernel for Agentic Systems"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
